# 4dill

./: .env.example  .geminiignore  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  alembic.ini  pyproject.toml
.claude/: settings.local.json
.claude/skills/approve-pr/: SKILL.md
.claude/skills/create-pr/: SKILL.md
.claude/skills/document-release/: SKILL.md.tmpl
.claude/skills/document-us/: SKILL.md
.claude/skills/lint-format-typecheck/: SKILL.md
.claude/skills/review/: SKILL.md.tmpl
.claude/skills/test-us/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.gemini/: settings.json
.gemini/skills/approve-pr/: SKILL.md
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml
.obsidian/: graph.json  workspace.json
alembic/: env.py
alembic/versions/: 001_initial_schema.py
docker/: init-db.sql
docs/: AGENT-ARCHITECTURE.md  DATABASE-SCHEMA.md  DATABASE_SETUP.md  EXECUTION-FLOW.md  LANGCHAIN-SKILLS-GUIDE.md  LANGSMITH-EVALS-RESEARCH.md  PROJECT-STRUCTURE.md  README.md  USER-STORIES.md
docs/.obsidian/: graph.json  workspace.json
src/pentest/: __init__.py  config.py
tests/: README.md  conftest.py
tests/agent/: README.md  test_adviser_agent.py  test_generator_agent.py  test_placeholder.py  test_scanner.py  test_scanner_templates.py  test_searcher_agent.py
tests/e2e/: README.md  test_adviser_e2e.py  test_generator_claude_e2e.py  test_generator_llm_e2e.py  test_graphiti_knowledge_graph.py  test_graphiti_raw_text_to_graph.py  test_real_materialization.py  test_real_pentest_scenarios.py  test_scanner_browser_advanced.py  test_scanner_e2e.py  test_searcher_agent_e2e.py  test_searcher_eval_infra_e2e.py
tests/evals/: portswigger_labs.json  run_agent_eval.py  spinup.py  test_portswigger_mvp.py  test_run_agent_eval.py  test_spinup.py  test_spinup_e2e.py
tests/integration/: README.md  conftest.py  test_placeholder.py
tests/unit/: README.md  test_devcontainer_config.py  test_project_structure.py
(+270 files in other folders)
